--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
   jpa:
     generate-ddl: true
     hibernate:
-      dll-auto: update
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
